# SkillsHub

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DOC.md  LICENSE  README.md  README_CN.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.agent/rules/: default.md
.github/workflows/: release.yml
crates/skillshub-cli/: Cargo.toml
crates/skillshub-cli/src/: main.rs
crates/skillshub-cli/src/commands/: discover.rs  info.rs  install.rs  list.rs  mod.rs  registry.rs  scan.rs  sync.rs  tools.rs  uninstall.rs  update.rs
crates/skillshub-core/: Cargo.toml
crates/skillshub-core/src/: cloud_sync.rs  config.rs  error.rs  lib.rs  plugins.rs  scanner.rs  store.rs  sync.rs  update.rs
crates/skillshub-core/src/adapters/: amp.rs  antigravity.rs  claude.rs  codebuddy.rs  codex.rs  copilot.rs  cursor.rs  factory.rs  gemini.rs  goose.rs  kilocode.rs  kimi.rs  mod.rs  openclaw.rs  opencode.rs  qwen.rs  roocode.rs  trae.rs  windsurf.rs
crates/skillshub-core/src/models/: mod.rs  scan_report.rs  skill.rs  sync_state.rs  tool.rs
crates/skillshub-core/src/registry/: clawhub.rs  git.rs  mod.rs
docs/: research-data-sources.md
scripts/: check-i18n.ts
src/: App.tsx  i18n.tsx  index.css  main.tsx  theme.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/commands/: cloud.rs  config.rs  mod.rs  plugins.rs  registry.rs  security.rs  skills.rs  sync.rs  tools.rs  types.rs
src/components/: Layout.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx
src/contexts/: UpdateCheckContext.tsx
src/hooks/: useAppUpdate.ts  useUpdateCheck.ts
src/locales/: de.ts  en.ts  es.ts  fr.ts  ja.ts  ko.ts  pt.ts  ru.ts  zh.ts
src/pages/: Discover.tsx  Installed.tsx  Security.tsx  Settings.tsx  SkillDetail.tsx  SyncDashboard.tsx
src/pages/settings/: AboutTab.tsx  AddRegistryModal.tsx  AddToolModal.tsx  CloudSyncTab.tsx  GeneralTab.tsx  SecurityTab.tsx  ToolsTab.tsx  types.ts
