[package]
name = "skillshub-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for SkillsHub - Agent Skills management platform"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
walkdir.workspace = true
glob.workspace = true
dirs.workspace = true
regex.workspace = true
sha2.workspace = true
hex.workspace = true
reqwest.workspace = true
url.workspace = true

[dev-dependencies]
tempfile = "3.10"
